# industrial-equipment-failure-prediction

./: .gitignore  .pre-commit-config.yaml  README.md  dvc.yaml  pyproject.toml
.dvc/: config
configs/: baseline.yaml  nn.yaml
configs/data/: data.yaml
configs/logging/: mlflow.yaml
configs/model/: baseline_config.yaml  nn_config.yaml
configs/training/: default.yaml  nn_setup.yaml
industrial_failure/data/: .gitignore  datamodule.py  download.py  equipment_anomaly_data.csv.dvc
industrial_failure/inference/: predict.py
industrial_failure/models/: baseline.py  baseline_model.pkl  equipment_nn.ckpt  equipment_nn.py  preprocessor.pkl
industrial_failure/training/: train_baseline.py  train_nn.py
industrial_failure/utils/: metrics.py  preprocessing.py
scripts/: train.py
